show and hide password (ubah password, login, register)

--- a/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
@@ -29,6 +29,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/ubah_pass" />
+    <include layout="@layout/ubahpass" />
 
 </RelativeLayout>
