--- a/NurseryPolije/app/src/main/res/layout/layout_login.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_login.xml
@@ -19,21 +19,72 @@
             android:layout_marginTop="@dimen/loginViewsMargin"
             android:fontFamily="@font/cl_bold"/>
 
-        <EditText
-            android:id="@+id/etemail"
-            style="@style/modifiedEditText"
-            android:layout_height="wrap_content"
-            android:hint="@string/login_email_hint"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:fontFamily="@font/cl_bold"/>
-        <EditText
-            android:id="@+id/etpassword"
-            style="@style/modifiedEditText"
-            android:hint="@string/login_password_hint"
-            android:maxLines="1"
-            android:inputType="textPassword"
-            android:fontFamily="@font/cl_bold"/>
+<!--        <EditText-->
+<!--            android:id="@+id/etemail"-->
+<!--            style="@style/modifiedEditText"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="@string/login_email_hint"-->
+<!--            android:inputType="textEmailAddress"-->
+<!--            android:maxLines="1"-->
+<!--            android:fontFamily="@font/cl_bold"/>-->
+<!--        <EditText-->
+<!--            android:id="@+id/etpassword"-->
+<!--            style="@style/modifiedEditText"-->
+<!--            android:hint="@string/login_password_hint"-->
+<!--            android:maxLines="1"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:fontFamily="@font/cl_bold"/>-->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/emaillayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etemail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@style/modifiedEditText"
+                    android:hint="@string/login_email_hint"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:fontFamily="@font/cl_bold"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/passlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/emaillayout"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etpassword"
+                    style="@style/modifiedEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/cl_bold"
+                    android:hint="@string/login_password_hint"
+                    android:inputType="textPassword"
+                    android:maxLines="1" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
             android:id="@+id/lupa"
             style="@style/viewParent"
