--- a/NurseryPolije/app/src/main/res/layout/layout_register.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_register.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/loginCard"
     app:cardCornerRadius="@dimen/loginCardRadius"
     android:elevation="5dp"
@@ -55,13 +56,36 @@
             android:fontFamily="@font/cl_bold"
             android:hint="@string/regis_email_hint"/>
 
-        <EditText
-            android:id="@+id/regis_password"
-            style="@style/modifiedEditText"
-            android:layout_height="wrap_content"
-            android:hint="@string/regis_password1_hint"
-            android:inputType="textPassword"
-            android:fontFamily="@font/cl_bold"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:passwordToggleEnabled="true"
+                tools:ignore="MissingConstraints">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/regis_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@style/modifiedEditText"
+                    android:hint="@string/regis_password1_hint"
+                    android:inputType="textPassword"
+                    android:fontFamily="@font/cl_bold"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--        <EditText-->
+<!--            android:id="@+id/regis_password"-->
+<!--            style="@style/modifiedEditText"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="@string/regis_password1_hint"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:fontFamily="@font/cl_bold"/>-->
 
 
         <TextView
